# rust-fastleng

./: Cargo.toml  README.md
.github/workflows/: quickstart-ci.yml
src/: bam_loader.rs  fastx_loader.rs  length_stats.rs  lib.rs  main.rs
test_data/: five_strings.fa  five_strings.sam  long_strings.bam  long_strings.fa  long_strings.sam  panic_file.fa  single_string.fa  single_string.sam  small_strings.fa  small_strings.sam
