[package]
name = "fastleng"
version = "0.1.0"
authors = ["holtjma <jholt@hudsonalpha.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
needletail = "0.4.1"
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0.66"

[dev-dependencies]

[profile.release]
lto = true
