[package]
name = "fastleng"
version = "0.2.0"
authors = ["holtjma <mholt@pacificbiosciences.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "fastleng - read length statistics tool"
homepage = "https://github.com/HudsonAlpha/rust-fastleng"
repository = "https://github.com/HudsonAlpha/rust-fastleng"
# documentation - auto-linked
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
env_logger = "0.9.0"
exitcode = "1.1.2"
log = "0.4.14"
needletail = "0.4.1"
rust-htslib = { version = "0.39.5", default-features = false, features = ["static"] }
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0.66"

[dev-dependencies]

[profile.release]
lto = true
